modif le design des vues sous forme de module

--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -471,6 +471,13 @@
   <ItemGroup>
     <Resource Include="Ressource\archive.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\editWhite.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ressource\addWhite.png" />
+    <Resource Include="Ressource\deleteWhite.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
