--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -149,6 +149,7 @@
     <Compile Include="ViewModel\Organisation\Program\ShowProgramViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\Request\AddRequestViewModel.cs" />
+    <Compile Include="ViewModel\Request\EditRequestViewModel.cs" />
     <Compile Include="ViewModel\Request\ListRequestViewModel.cs" />
     <Compile Include="ViewModel\Request\Program\AddPropositionViewModel.cs" />
     <Compile Include="ViewModel\Request\RequestViewModel.cs" />
@@ -232,6 +233,9 @@
     </Compile>
     <Compile Include="View\Request\AddRequestView.xaml.cs">
       <DependentUpon>AddRequestView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Request\EditRequestView.xaml.cs">
+      <DependentUpon>EditRequestView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Request\ListRequestUCView.xaml.cs">
       <DependentUpon>ListRequestUCView.xaml</DependentUpon>
@@ -387,6 +391,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\Request\AddRequestView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Request\EditRequestView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
