--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Helper\Enum\Kinship.cs" />
     <Compile Include="Helper\Enum\User.cs" />
     <Compile Include="Helper\Event.cs" />
+    <Compile Include="Helper\SortableObservableCollection.cs" />
     <Compile Include="Helper\Tab.cs" />
     <Compile Include="Helper\TabContent.cs" />
     <Compile Include="Helper\Validation.cs" />
