--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Helper\SortableObservableCollection.cs" />
     <Compile Include="Helper\Tab.cs" />
     <Compile Include="Helper\TabContent.cs" />
+    <Compile Include="Helper\TabName.cs" />
     <Compile Include="Helper\Validation.cs" />
     <Compile Include="Model\campaign.cs" />
     <Compile Include="Model\campu.cs" />
