--- a/PrototypeEDUCOM.csproj
+++ b/PrototypeEDUCOM.csproj
@@ -90,12 +90,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Helper\Enum\Civility.cs" />
-    <Compile Include="Helper\Enum\EnumDb.cs" />
-    <Compile Include="Helper\Enum\Gender.cs" />
-    <Compile Include="Helper\Enum\Journey.cs" />
-    <Compile Include="Helper\Enum\Kinship.cs" />
-    <Compile Include="Helper\Enum\User.cs" />
+    <Compile Include="Helper\Dictionaries.cs" />
     <Compile Include="Helper\Event.cs" />
     <Compile Include="Helper\SortableObservableCollection.cs" />
     <Compile Include="Helper\Tab.cs" />
